--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "bcryptjs": "^2.4.3",
         "better-sqlite3": "^9.2.2",
         "better-sqlite3-session-store": "^0.1.0",
